Commit changes to web interface code.